--- a/manifest.json
+++ b/manifest.json
@@ -27,11 +27,43 @@
         "bos/Server.js",
         "bos/Storage.js",
         "bos/net/CommandManager.js",
-        "bos/Global.js",
+        "bos/Main.js",
         "bos/Tweaks.js",
         "bos/SharestringConverter.js",
         "bos/Utils.js",
         "bos/CityTypes.js",
-        "bos/City.js"
+        "bos/City.js",
+        "bos/gui/SummaryPage.js",
+        "bos/ui/table/Table.js",
+        "bos/gui/TradeOrdersPage.js",
+        "bos/gui/TradeRouteWidget.js",
+        "bos/gui/PurifyOptionsWidget.js",
+        "bos/gui/PurifyResourcesPage.js",
+        "bos/gui/TradeRoutesPage.js",
+        "bos/gui/MyAlliancePage.js",
+        "bos/gui/IntelligenceOptionsWidget.js",
+        "bos/gui/IntelligencePage.js",
+        "bos/gui/PlayerInfoPage.js",
+        "bos/gui/AllianceInfoPage.js",
+        "bos/gui/IncomingAttacksPage.js",
+        "bos/gui/MassRecruitmentOptionsWidget.js",
+        "bos/gui/MassRecruitmentPage.js",
+        "bos/gui/UnitOrdersPage.js",
+        "bos/gui/RegionPage.js",
+        "bos/gui/DungeonsPage.js",
+        "bos/gui/CastlesPage.js",
+        "bos/gui/CitiesPage.js",
+        "bos/gui/OptionsPage.js",
+        "bos/gui/MilitaryPage.js",
+        "bos/gui/DefendersPage.js",
+        "bos/gui/ExtraSummaryWidget.js",
+        "bos/gui/SummaryWidget.js",
+        "bos/gui/FoodCalculatorWidget.js",
+        "bos/gui/RecruitmentSpeedCalculatorWidget.js",
+        "bos/gui/CombatCalculatorWidget.js",
+        "bos/ui/table/cellrenderer/Default",
+        "bos/ui/table/cellrenderer/HumanTime",
+        "bos/ui/table/cellrenderer/ClickableLook",
+        "bos/ui/table/cellrenderer/Resource"
     ]
 }
